--- a/samcalculator/static/samcalculator/index.html
+++ b/samcalculator/static/samcalculator/index.html
@@ -7,6 +7,13 @@
     <link rel="icon" type="image/png" href="static/samcalculator/img/favico.png" />
 </head>
 <body>
+  <div id="menu">
+    <ul>
+        <li><a href="/" >Menu principal</a></li>
+        <li><a>Options</a></li>
+        <li><a>Recommencer</a></li>
+    </ul>
+</div>
 <div id="container"></div>
 <script src="static/samcalculator/main.js"></script>
 </body>
